{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 217,
  "lineage": "334e4f05-8fc0-db37-3282-af1dcf0e7ba3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:107312390082:vpc/vpc-32ab635b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-cc468ea5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-baf43cd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-32ab635b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-34ae655d",
            "owner_id": "107312390082",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:loadbalancer/app/test-alb-tf/3192e275feed1f25",
            "arn_suffix": "app/test-alb-tf/3192e275feed1f25",
            "dns_name": "test-alb-tf-65788669.eu-north-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:loadbalancer/app/test-alb-tf/3192e275feed1f25",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb-tf",
            "security_groups": [
              "sg-03502e1debad11fbb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2eb05855"
              },
              {
                "subnet_id": "subnet-6adfd420"
              },
              {
                "subnet_id": "subnet-a2408ecb"
              }
            ],
            "subnets": [
              "subnet-2eb05855",
              "subnet-6adfd420",
              "subnet-a2408ecb"
            ],
            "vpc_id": "vpc-32ab635b",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "depends_on": [
            "aws_security_group.lb_sg",
            "data.aws_subnet_ids.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:listener/app/test-alb-tf/3192e275feed1f25/b1ed125e92cad528",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:targetgroup/tf-example-lb-tg/b42e42546e3e8c41",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:listener/app/test-alb-tf/3192e275feed1f25/b1ed125e92cad528",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:loadbalancer/app/test-alb-tf/3192e275feed1f25",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.test",
            "aws_lb_target_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:targetgroup/tf-example-lb-tg/b42e42546e3e8c41",
            "arn_suffix": "targetgroup/tf-example-lb-tg/b42e42546e3e8c41",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:107312390082:targetgroup/tf-example-lb-tg/b42e42546e3e8c41",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-32ab635b"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:107312390082:security-group/sg-0b61793082ef2c3dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b61793082ef2c3dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "107312390082",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-32ab635b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:107312390082:security-group/sg-03502e1debad11fbb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-03502e1debad11fbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": null,
            "owner_id": "107312390082",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-32ab635b"
          }
        }
      ]
    }
  ]
}